spring-shell v4